wp-content/themes/delivering-happiness/assets/sass/global/_components.scss
/* ... */
.products-animation {
    text-align: center;
    .wrapper {
        @include clearfix;
        padding: 70px 0 0 0;
    }
    h2 {
        @extend %heading-level-7;
        font-style: italic;
        margin-bottom: 20px;
    }
    img {
        width: 412px;
        height: 412px;
    }
}

.clients {
    .media {
        @include clearfix;
        padding: 63px;
        letter-spacing: -1px;
        .all-coins {
            padding-left: 82px;
        }
        .coin {
            margin: 0 35px 30px 0;
            .left-pull {
                margin-left: 0px;
            }
        }
    }
    .content {
        padding: 0 67px;
        color: $White;
        text-align: center;
        .v-aling {
            @include size(585px, 545px);
            display: table-cell;
            vertical-align: middle;
        }
        blockquote {
            @extend %pharagraph-level-3;
            font-style: italic;
            position: relative;
            line-height: 30px;
            &:before,
            &:after {
                @include size(47px, 37px);
                position: absolute;
                content: '';
                left: 50%;
                margin-left: -28px;
            }
            &:before {
                @include bg-img-only(quote-top, png, no-repeat, center, center);
                top: -85px;
            }
            &:after {
                @include bg-img-only(quote-bottom, png, no-repeat, center, center);
                bottom: -130px;
            }
        }
        span {
            text-transform: uppercase;
            display: block;
            margin-top: 31px;
            color: #c5e7f1;
            letter-spacing: 1px;
        }
    }
}

.products-animation {
    .card {
        @include transition(all 0.5s ease);
        @extend %pull-left;
        overflow: hidden;
        @include size(84px, 412px);
        &.active {
            @include size(412px, 412px);
        }
    }
}

.video-container {
    .onload-container {
        @extend %block-center;
        @include size(1170px, 546px);
        position: relative;
        overflow: hidden;
        .video {
            @include size(1170px, 510px);
            position: absolute;
            left: 0px;
            top: 0px;
            display: none;
            z-index: 10;
        }
    }
}

.post-navigation,
.paging-navigation {
    .screen-reader-text {
        display: none;
    }
    a {
        @include border_radius(13px);
        @include transition(all 0.3s ease);
        @extend %text-center;
        width: 146px;
        padding: 15px 25px;
        margin-left: 10px;
        cursor: pointer;
        color: $Blue;
        border: none;
        border: 1px solid $Blue;
        background-color: rgba($Blue, 0.1);
        color: $Blue;
        text-transform: uppercase;
        display: block;
        &:hover {
            background-color: rgba($Blue, 0.2);
        }
    }
    .nav-previous {
        @extend %pull-right;
    }
    .nav-next {
        @extend %pull-left;
    }
}

.post-navigation {
    .nav-previous {
        float: left !important;
    }
    .nav-next {
        float: right !important;
    }
}

.gform_confirmation_message,
.validation_message,
.validation_error {
    font-size: 12px;
    padding: 10px 0;
    color: red;
    line-height: normal;
}

.gform_confirmation_message {
    color: green;
}

.flare {
    top: 140px !important;
}

.modal-box {
    @include border_radius(10px);
    @include absolute-valing($pos: fixed, $width: 650px, $height: 600px, $ptop: 50%);
    border: 5px solid #666666;
    background: white;
    z-index: 999999;
    padding: 30px;
    text-align: center;
    .gform_wrapper {
        .gfield_label {
            display: none;
        }
        .ginput_container input {
            width: 226px;
            line-height: 16px;
            display: block;
            margin: 0px auto;
            margin-bottom: 10px;
        }
        .button {
            padding: 9px 29px !important;
            position: static !important;
            cursor: pointer;
            background-color: rgba($ModerateViolet, 0.3) !important;
            border-color: $ModerateViolet !important;
            color: $ModerateViolet !important;
            margin-top: 15px;
            margin-bottom: 20px;
            &:hover {
                background-color: rgba($ModerateViolet, 0.5) !important;
            }
        }
        .validation_error{
            padding: 0;
            margin-top: -5px;
            margin-bottom: 10px;
        }
    }
    a{
        color: $Blue;
    }
    .close {
        color: $Blue;
        text-decoration: underline;
        cursor: pointer;
    }
}

.faded {
    display: none;
    background: rgba(0, 0, 0, 0.5);
    position: absolute;
    left: 0px;
    top: 0px;
    width: 100%;
    z-index: 99999;
}

